style.css
body {
  font-family: "Roboto", "sans-serif";
  display: flex;
  flex-direction: column;
  margin: 0;
}

header,
footer {
  display: flex;
  height: 40px;
  align-self: stretch;
  background-color: #1f2937;
}

header {
  justify-content: space-between;
  padding: 10px 100px;
}

ul {
  display: flex;
  list-style-type: none;
  gap: 20px;
}

a {
  text-decoration: none;
}

.logo {
  border-radius: 50%;
  width: 40px;
}

.hero {
  display: flex;
  background-color: #1f2937;
  padding: 70px 0;
  gap: 10px;
  justify-content: center;
  align-items: center;
}
.hero-text {
  display: flex;
  flex-wrap: wrap;
  max-width: 400px;
  gap: 10px;
}
.main-text {
  font-size: 48px;
  font-weight: 800;
  color: #f9faf8;
}
button {
  background-color: #3882f6;
  border: none;
  border-radius: 5px;
  padding: 5px 15px;
  color: white;
  font-weight: 700;
}

.subtext {
  color: #e5e7eb;
  font-size: 18px;
}

.hero-image {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: grey;
  width: 500px;
  height: 240px;
  color: white;
}

.information {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex: 1;
}

.header-text {
  display: flex;
  justify-content: center;
  padding: 30px 0px;
  font-size: 36px;
  font-weight: 800;
  color: #1f2937;
}

.container {
  margin-top:25px;
  display: flex;
  flex-wrap: wrap;
  width: 170px;
  justify-content: center;
}

.container > img {
  height: 150px;
  width: 150px;
  border-style: solid;
  border-radius: 10%;
  border-color: #3882f6;
}
.boxes {
  display: flex;
  justify-content: center;
  align-items: center;
  gap:50px;
  text-align: center;
}

.container > .subtext {
  color: black;
}

.quote{
  margin:100px 0;
  background-color: #e5e7eb;
  height: 350px;
  color:#1f2937;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 70px;
}

.quote-text{
  font-size: 36px;
  font-weight: 400;
}

.quote-author{
  font-size:24px;
  font-weight: 800;
  align-self: flex-end;
}

